# kiki-flow-research

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTORS.md  PERFORMANCE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: reproducibility.yml
bench/: CLAUDE.md  T3_latency.jsonl  sinkhorn_backend_bench.jsonl
bench/cl_llm/runs/: e3_5k_5seeds_summary.json  e4b_5seeds_summary.json
bench/sinkhorn_mlx/: stats.json
bench/sinkhorn_pot/: stats.json
docs/: ANNOUNCE.md
docs/superpowers/: integration-notes.md
docs/superpowers/patches/: 00-micro-kiki-dep1-ane-router-dynamic-N.patch  01-micro-kiki-dep4-feature-flag.patch  02-micro-kiki-dep3-runner-factory.md  README.md
docs/superpowers/plans/: 2026-04-19-query-conditioned-f.md
docs/superpowers/specs/: 2026-04-19-query-conditioned-f-design.md
experiments/: check_lambda_monotonicity.py
kiki_flow_core/: CLAUDE.md  __init__.py  master_equation.py
kiki_flow_core/modules/: __init__.py  phonological_loop.py
kiki_flow_core/species/: __init__.py  canonical_species.py  mixed_canonical_stacks.py
kiki_flow_core/track1_perf/: eulerian_grid_solver.py  offline_consolidator.py  phenomenological_f.py
kiki_flow_core/track2_paper/: __init__.py  mlx_particle_simulator.py  mlx_wasserstein.py  multiscale_loop.py  paper_f.py  paper_f_separable.py  paper_run.py  particle_simulator.py  pca_projection.py
kiki_flow_core/track2_paper/figures/: __init__.py
kiki_flow_core/track3_deploy/: kiki_flow_bridge.py  surrogate_trainer.py  surrogate_trainer_v3.py
kiki_flow_core/track3_deploy/data/: corpus_builder.py  heuristic_labeler.py  phono_classes.py  sem_categories.py  syntax_patterns.py  synth_qwen.py
kiki_flow_core/track3_deploy/encoders/: __init__.py  base.py  hash_mlp.py  tiny_tf.py
kiki_flow_core/track3_deploy/eval/: __init__.py  kl_species.py
kiki_flow_core/track3_deploy/weights/: v0.1.safetensors
paper/: CLAUDE.md  cl_benchmark_embeddings.json  cl_benchmark_ewc.json  cl_benchmark_multimodal.json  coupling_modes_summary.md  coupling_modes_summary_asym_active.md  hyperparam_sweep_coupling_modes.json  hyperparam_sweep_coupling_modes_asym_active.json  main.tex  stats.json
paper/arxiv_bundle/: main.tex
paper/trajectories/: seed0.safetensors  seed1.safetensors  seed2.safetensors  seed3.safetensors  seed4.safetensors
paper/workshop/: section_4_method.tex
paper_rigorous/: CLAUDE.md  stats.json
scripts/: CLAUDE.md  cl_benchmark_embeddings.py  cl_benchmark_ewc.py  cl_benchmark_multimodal.py  diagnose_coupling_modes.py  dump_hybrid_pairs.py  dump_t2_pairs.py  fast_vs_rigorous_kl.py  hyperparam_sweep.py  hyperparam_sweep_coupling_modes.py  hyperparam_sweep_dense.py  label_corpus_chkpt.py
scripts/cl_llm_bench/: __init__.py  aggregate_seeds.py  bridge_integration.py  lora_trainer.py  run_cl_bench.py
scripts/cl_llm_bench/kxkm_trainer/: README.md  __init__.py  train_cl_task.py
tests/: CLAUDE.md  test_coupling_variants.py  test_j_split_identity.py  test_lambda_monotonicity_shape.py  test_master_equation.py  test_phonological_loop.py  test_property_based.py  test_species_canonical.py  test_species_hybrid.py  test_species_hybrid_edges.py
tests/scripts/cl_llm_bench/: __init__.py  test_aggregate_seeds.py  test_bridge_integration.py  test_kxkm_trainer.py  test_lora_trainer.py  (+2 more)
tests/track1_perf/: test_eulerian_grid_solver.py  test_phenomenological_f.py
tests/track2_paper/: __init__.py  test_figures.py  test_mlx_particle_simulator.py  test_mlx_wasserstein.py  test_multiscale_loop.py  test_paper_f.py  test_particle_simulator.py  test_pca_projection.py  test_separable_energy.py
tests/track3_deploy/: test_corpus_builder.py  test_encoder_hash_mlp.py  test_encoder_tiny_tf.py  test_eval_kl.py  test_heuristic_labeler.py  test_joint_trainer_v3.py  test_kiki_flow_bridge.py  test_phono_classes.py  test_synth_qwen.py
(+23 files in other folders)
