[project]
name = "kiki-flow-core"
version = "0.0.1"
description = "Wasserstein-gradient-flow engine for micro-kiki self-organization"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "L'Electron Rare", email = "contact@saillant.cc" }]
dependencies = [
    "mlx>=0.20",
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "POT>=0.9",
    "pydantic>=2.6",
    "numpy>=2.1",
    "pyyaml>=6.0",
    "prometheus-client>=0.20",
    "scikit-learn>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "matplotlib>=3.8",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kiki_flow_core"]

[tool.hatch.build.targets.wheel.force-include]
"kiki_flow_core/species/data" = "kiki_flow_core/species/data"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RET", "PL"]
ignore = ["PLR0913"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["ot", "ot.*", "sklearn", "sklearn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]  # avoids uv+py314 UF_HIDDEN .pth issue on macOS
addopts = "-v --strict-markers --cov=kiki_flow_core --cov-report=term-missing --import-mode=importlib"
markers = ["slow: tests > 1s", "golden: numerical regression tests"]
